logs/pyth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyth'...
Listing './lib/python3.5/site-packages/pyth/encodings'...
Listing './lib/python3.5/site-packages/pyth/plugins'...
Listing './lib/python3.5/site-packages/pyth/plugins/latex'...
Listing './lib/python3.5/site-packages/pyth/plugins/pdf'...
Listing './lib/python3.5/site-packages/pyth/plugins/plaintext'...
Listing './lib/python3.5/site-packages/pyth/plugins/python'...
Listing './lib/python3.5/site-packages/pyth/plugins/rst'...
Compiling './lib/python3.5/site-packages/pyth/plugins/rst/writer.py'...
***   File "./lib/python3.5/site-packages/pyth/plugins/rst/writer.py", line 52
    return ur"\ :sub:`%s`\ " % ret
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyth/plugins/rtf15'...
Compiling './lib/python3.5/site-packages/pyth/plugins/rtf15/reader.py'...
***   File "./lib/python3.5/site-packages/pyth/plugins/rtf15/reader.py", line 653
    match = re.match(ur'HYPERLINK "(.*)"', destination)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyth/plugins/rtf15/writer.py'...
***   File "./lib/python3.5/site-packages/pyth/plugins/rtf15/writer.py", line 237
    self.target.write('{\up9 ')
                     ^
SyntaxError: (unicode error) 'unicodeescape' codec can't decode bytes in position 1-2: truncated \uXXXX escape

Listing './lib/python3.5/site-packages/pyth/plugins/xhtml'...
Listing './lib/python3.5/site-packages/pyth-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
